--- a/styles/PostcardStyle.css
+++ b/styles/PostcardStyle.css
@@ -162,10 +162,12 @@ border: 10px solid rgb(246, 247, 248);
 }
 .front{
     transition: all .5s;
-    width: 100%;
+    /* height: 100%; */
     /* margin: 10px; */
     box-sizing: border-box;
     justify-content: center;
+    width: 100%;
+    display: block!important;
 }
     
 /* footer */
