--- a/styles/I_Style.css
+++ b/styles/I_Style.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Libre Baskerville', serif;  
-    background-image: url("../pic/bg r.jpg");
+    background-image: url("../pic/bg_20r.jpg");
 
 }
 
