--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Libre Baskerville', serif;
-    background-image: url("../pic/bg_20r.jpg");
+    background-image: url("../pic/bg.jpg");
     /* font-family:  */
     /* text-align: center; */
     font-weight: 300px;
