--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Libre Baskerville', serif;
-    /* background-image: url("../pic/bg.jpg"); */
+    background-image: url("../pic/bg.jpg"); 
     font-weight: 300px;
     font-size: 18px;
     line-height: 1.5;
@@ -19,10 +19,9 @@ body{
     flex-direction: row;
     justify-content:center;
     flex-wrap: wrap;
-    
-    } 
 
-  
+    } 
+ 
   .header {
         background-repeat: no-repeat;
         background-position: cener;
