--- a/styles/style.css
+++ b/styles/style.css
@@ -270,7 +270,7 @@ container_NELA_third{
     
    .dws-wrapper2 {
     font-family: 'Libre Baskerville', serif;
-    background-image: url("../pic/bg r.jpg");
+    background-image: url("../pic/bg.jpg");
     width: 95%;
     /* margin: 30px; */
     padding: 30px;
