--- a/styles/I_Style.css
+++ b/styles/I_Style.css
@@ -1,9 +1,8 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: 'Libre Baskerville', serif;  
-    background-image: url("../pic/bg_20r.jpg");
-
+    font-family: 'Libre Baskerville', serif;
+    background-image: url("../pic/bg.jpg");
 }
 
 .dws-wrapper2 {
