--- a/styles/PostcardStyle.css
+++ b/styles/PostcardStyle.css
@@ -4,7 +4,7 @@ body{
     height: 100%;
     min-height: 100%;
     font-family: 'Libre Baskerville', serif;
-    background-image: url("../pic/bg_20r.jpg");
+    background-image: url("../pic/bg.jpg");
     /* background: rgb(121, 119, 119);  */
     font-size: 25px;
     line-height: 35px;
