--- a/styles/PortraitStyle.css
+++ b/styles/PortraitStyle.css
@@ -204,3 +204,21 @@ li.menu_item {
    .button:hover {
     background: #3e63dc;
    }            
+
+   /* <wrapper> */
+    
+   .dws-wrapper2 {
+    font-family: 'Libre Baskerville', serif;
+    background-image: url("../pic/bg.jpg");
+    width: 95%;
+    /* margin: 30px; */
+    padding: 30px;
+    display: none;
+    flex-wrap: wrap;
+    text-align: justify;
+    color: #d7eefa;
+    position: fixed;
+    height: 100vh;
+    top: 0;
+    overflow: scroll;
+}
