--- a/styles/L_SStyle.css
+++ b/styles/L_SStyle.css
@@ -139,6 +139,25 @@ flex-basis: 600px;
 height: 200px;
 }
 
+ /* <wrapper> */
+    
+ .dws-wrapper2 {
+    font-family: 'Libre Baskerville', serif;
+    background-image: url("../pic/bg.jpg");
+    width: 95%;
+    /* margin: 30px; */
+    padding: 30px;
+    display: none;
+    flex-wrap: wrap;
+    text-align: justify;
+    color: #d7eefa;
+    position: fixed;
+    height: 100vh;
+    top: 0;
+    overflow: scroll;
+}
+
+
 /* footer */
 
 .footer{
