--- a/styles/PostcardStyle.css
+++ b/styles/PostcardStyle.css
@@ -172,6 +172,24 @@ border: 10px solid rgb(246, 247, 248);
     width: 100%;
     display: block!important;
 }
+
+ /* <wrapper> */
+    
+ .dws-wrapper2 {
+    font-family: 'Libre Baskerville', serif;
+    background-image: url("../pic/bg.jpg");
+    width: 95%;
+    /* margin: 30px; */
+    padding: 30px;
+    display: none;
+    flex-wrap: wrap;
+    text-align: justify;
+    color: #d7eefa;
+    position: fixed;
+    height: 100vh;
+    top: 0;
+    overflow: scroll;
+}
     
 /* footer */
 
