--- a/styles/TAPStyle.css
+++ b/styles/TAPStyle.css
@@ -133,6 +133,25 @@ li.menu_item {
     width: 100%;
     height: auto;
 }
+
+ /* <wrapper> */
+    
+ .dws-wrapper2 {
+    font-family: 'Libre Baskerville', serif;
+    background-image: url("../pic/bg.jpg");
+    width: 95%;
+    /* margin: 30px; */
+    padding: 30px;
+    display: none;
+    flex-wrap: wrap;
+    text-align: justify;
+    color: #d7eefa;
+    position: fixed;
+    height: 100vh;
+    top: 0;
+    overflow: scroll;
+}
+
 /* footer */
 
 .footer{
