--- a/styles/TAPStyle.css
+++ b/styles/TAPStyle.css
@@ -139,7 +139,7 @@ li.menu_item {
  .dws-wrapper2 {
     font-family: 'Libre Baskerville', serif;
     background-image: url("../pic/bg.jpg");
-    width: 95%;
+    width: 100%;
     /* margin: 30px; */
     padding: 30px;
     display: none;
@@ -204,7 +204,7 @@ h2{
     text-align: justify;
 
 } 
-h3{
+.tapest{
     text-align: center;
     
     color: rgb(73, 75, 75);
