--- a/styles/media.css
+++ b/styles/media.css
@@ -12,7 +12,10 @@
     }   
 }
 @media only screen and (max-width: 320px){
-    
+    .box-1{
+        margin: 0;
+        padding: 0;
+    } 
 }
 @media only screen and (max-width: 240px){
     
@@ -23,10 +26,12 @@
 @media screen and (max-width: 450px){
     .content{
         flex-direction: column-reverse!important;
+        
+    }  
+    .box-1{
         margin: 0;
         padding: 0;
-    }  
-
+    }
     .header{
         display: none;
     }
