--- a/styles/style.css
+++ b/styles/style.css
@@ -124,7 +124,7 @@ body{
   
 .box-1{
      /* background: #691a1aad;  */
-     /* width: 60%; */
+      width: 85%; 
      padding: 30px;
      margin: 30px;
      font-family: 'Libre Baskerville', serif;
