--- a/styles/PostcardStyle.css
+++ b/styles/PostcardStyle.css
@@ -2,12 +2,13 @@ body{
     margin: 0;
     padding: 0;
     height: 100%;
-    min-height: 100%;
+    min-height: 100vh;
     font-family: 'Libre Baskerville', serif;
     background-image: url("../pic/bg.jpg");
     /* background: rgb(121, 119, 119);  */
     font-size: 25px;
     line-height: 35px;
+    background-size: cover;
 }
 
 /* гамбургер */
