--- a/styles/PostcardStyle.css
+++ b/styles/PostcardStyle.css
@@ -105,7 +105,7 @@ li.menu_item {
     display: inline-block;
    
 }
-.tw{
+/* .tw{
    background: url("../icons/twitter-social-outlined-logo.PNG") no-repeat; 
    background-position: 100% 0;
    margin-left: 2px;
@@ -114,7 +114,7 @@ li.menu_item {
     background: url("../icons/facebook-logo-outline.PNG") no-repeat;
     background-position: 0 0;
     margin-left: 2px;
-}
+} */
 
 
 /* gallery postcards */
@@ -137,7 +137,7 @@ li.menu_item {
     flex-grow: 1;
     background: rgb(226, 225, 225);
     width: 170px;
-    height: 105px;
+    height: 112px;
     float: left;
     text-align: center;
     margin: 7px;
@@ -146,7 +146,7 @@ li.menu_item {
 .item > div{
     position: relative;
     /* margin-top: 15%; */
-    height: 115px;
+    height: 112px;
     width: 100%;
     /* margin: 10px 10px 10px 0px; */
     box-sizing: border-box;
